--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="future_operations">Here will be your operation history</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
+    <string name="year">2018</string>
+    <string name="description">Coolest app to control your finance.\nThis app can help you answer the question: \'Where\'s the money?\'</string>
 </resources>
