--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="about">About</string>
     <string name="year">2018</string>
     <string name="description">Coolest app to control your finance.\nThis app can help you answer the question: \'Where\'s the money?\'</string>
+    <string name="language">App language</string>
+
+    <string-array name="languages">
+        <item>Русский</item>
+        <item>English</item>
+    </string-array>
 </resources>
