--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,15 @@
     <string name="app_name">Lebowski</string>
 
     <!--home page-->
+
     <string name="rate">Rate</string>
     <string name="future_operations">Here will be your operation history</string>
+    <!--speed dial-->
+    <string name="add_expenditure">Add expenditure</string>
+    <string name="add_income">Add income</string>
+    <string name="manage_categories">Manage categories</string>
+
+    <!--home page-->
 
     <!--settings page-->
     <string name="settings">Settings</string>
@@ -18,5 +25,6 @@
     <string name="about">About</string>
     <string name="year">2018</string>
     <string name="description">Coolest app to control your finance.\nThis app can help you answer the question: \'Where\'s the money?\'</string>
+
 
 </resources>
