--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="add_expenditure">Add expenditure</string>
     <string name="add_income">Add income</string>
     <string name="manage_categories">Manage categories</string>
+    <string name="tbd">TBD</string>
 
     <!--home page-->
 
@@ -25,6 +26,5 @@
     <string name="about">About</string>
     <string name="year">2018</string>
     <string name="description">Coolest app to control your finance.\nThis app can help you answer the question: \'Where\'s the money?\'</string>
-
 
 </resources>
