add `add` button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <!--Accounts-->
     <string name="cash">Cash</string>
     <string name="credit_card">Credit card</string>
+    <string name="successfully_added">Added (not yet, but soon definitely will be</string>
     <!--Accounts-->
 
 </resources>
